[css-tables] Set table and cell widths dirty when row border width changes

Otherwise the old table width is reused.

BUG=609674

Review-Url: https://codereview.chromium.org/1952133006
Cr-Commit-Position: refs/heads/master@{#394329}

Former-commit-id: 0a7429662dd258bb3af4dd81ea5c7b96d2af9583